@@ -234,7 +234,8 @@ Optimizations
 Bug Fixes
 ----------------------
 
-* SOLR-2445: Register "standard" search handler. (koji)
+* SOLR-2445: Change the default qt to blank in form.jsp, because there is no "standard"
+  request handler unless you have it in your solrconfig.xml explicitly. (koji)
 
 Other Changes
 ----------------------
